[tool.poetry]
name = "workflows-test"
version = "0.1.0"
description = ""
authors = ["Matt Griswold <grizz@20c.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = ">=6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
